# react-native-siglip

./: .gitignore  .npmignore  README.md  app.plugin.js  expo-module.config.json  jest.config.js  nitro.json  package-lock.json  package.json  react-native-siglip.podspec  tsconfig.json
.agent/rules/: coding-style.md
.github/workflows/: build-binaries.yml
android/: CMakeLists.txt  build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: JNIVMHelper.hpp  SigLIPImageDecoder.cpp  cpp-adapter.cpp
android/src/main/java/com/reactnativesiglip/: SigLIPPackage.java
assets/: validation.json
cpp/: SigLIPError.hpp  SigLIPHybridObject.cpp  SigLIPHybridObject.hpp
cpp/image/: ImageDecoder.cpp  ImageDecoder.hpp  ImagePreprocessor.cpp  ImagePreprocessor.hpp  ImageTypes.hpp
example/: App.tsx  SiglipTokenizer.ts  app.json  index.ts  metro.config.js  package-lock.json  package.json  siglip2_vocab.json
ios/: SigLIPImageDecoder.mm
scripts/: build-executorch.sh  fix_xcframeworks.py  patch_xnnpack.py  setup-binaries.js
src/: SigLIP.nitro.ts  index.ts
test/: siglip-contract.test.ts
